--- a/frontend/src/Navigation/NavBurger/NavBurger.css
+++ b/frontend/src/Navigation/NavBurger/NavBurger.css
@@ -4,13 +4,15 @@
     flex-wrap: wrap;
     width: 30px;
     height: 30px;
+    background-color: var(--color-navy-blue);
+    border: none;
 }
 
 .burgerBox hr {
     margin: 1px 0;
     width: 80%;
-    background-color: black;
-    border: 1px solid black;
+    background-color: white;
+    border: 1px solid white;
     border-radius: 8px;
 }
 
