Added text shadows and adjusted border shadows on nav controls

--- a/frontend/src/Navigation/NavBurger/NavBurger.css
+++ b/frontend/src/Navigation/NavBurger/NavBurger.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     width: 30px;
     height: 30px;
-    background-color: var(--color-navy-blue);
+    background-color: transparent;
     border: none;
 }
 
