--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,3 +22,9 @@ body {
   width: 100%;
   position: absolute;
 }
+
+.navContainer {
+  width: 100%;
+  background-color: var(--color-navy-blue);
+  box-shadow: inset 0px 0px 16px 1px rgba(0, 0, 0, 0.25);
+}
