--- a/frontend/src/Navigation/SlideNav/SlideNav.css
+++ b/frontend/src/Navigation/SlideNav/SlideNav.css
@@ -4,7 +4,7 @@ nav {
     height: 100%;
     display: flex;
     padding-bottom: 30px; 
-    box-shadow: inset 0px 0px 16px 1px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0px 0px 16px 1px rgba(0, 0, 0, 0.25);
     z-index: 100;
     position: relative;
     left: -200px;
@@ -34,11 +34,13 @@ p {
     font-size: 1.1rem;
     font-weight: 500;
     margin: 8px;
+    text-shadow: 1px 1px black;
 }
 
 a { 
     text-decoration: none;
     color: var(--color-parchment);
+    text-shadow: 1px 1px black;
 }
 
 .selected {
