--- a/frontend/src/Navigation/NavBurger/NavBurger.css
+++ b/frontend/src/Navigation/NavBurger/NavBurger.css
@@ -11,8 +11,8 @@
 .burgerBox hr {
     margin: 1px 0;
     width: 80%;
-    background-color: white;
-    border: 1px solid white;
+    background-color: whitesmoke;
+    border: 1px solid whitesmoke;
     border-radius: 8px;
 }
 
