--- a/frontend/src/Navigation/SlideNav/SlideNav.css
+++ b/frontend/src/Navigation/SlideNav/SlideNav.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: var(--color-navy-blue);
+    background-color: var(--color-steel-blue);
     width: 200px;
     height: 100%;
     display: flex;
@@ -22,14 +22,14 @@ li {
 }
 
 hr {
-    border: 0.5px solid var(--color-dim-parchment);
+    border: 0.5px solid var(--color-dark-gray);
     box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.25);
     width: 100%;
     margin: 16px 0;
 }
 
 p {
-    color: var(--color-dim-parchment);
+    color: var(--color-dark-gray);
     font-style: italic;
     font-size: 1.1rem;
     font-weight: 500;
@@ -39,12 +39,12 @@ p {
 
 a { 
     text-decoration: none;
-    color: var(--color-parchment);
+    color: whitesmoke;
     text-shadow: 1px 1px black;
 }
 
 .selected {
-    border-bottom: 1px solid var(--color-parchment);
+    border-bottom: 1px solid whitesmoke;
 }
 
 .activeSlide {
