--- a/frontend/src/Visual/Background/Background.css
+++ b/frontend/src/Visual/Background/Background.css
@@ -1,26 +1,45 @@
-.backgroundTop,
-.backgroundBottom {
-    position: absolute;
-    z-index: -100;
+.background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    height: 100%;
     width: 100%;
-    height: 30%;
-}
-
-.backgroundTop {
+    z-index: -500;
+    position: absolute;
     top: 0;
 }
 
-.backgroundBottom {
-    bottom: 0;
-}
-
-.backgroundTop div {
+.ocean {
+    object-fit: cover;
     height: 100%;
-    position: relative;
+    min-width: 100%;
+    z-index: -300;
 }
 
-.backgroundTop div img {
+.waveContainer {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
+    z-index: -100;
 }
+
+.waveContainer img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    z-index: -50;
+}
+
+@media (min-width: 1300px){
+    .waveContainer img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+} 
