--- a/frontend/src/Navigation/SlideNav/SlideNav.css
+++ b/frontend/src/Navigation/SlideNav/SlideNav.css
@@ -1,34 +1,36 @@
 nav {
     background-color: var(--color-steel-blue);
     width: 200px;
-    height: 100%;
+    height: auto;
     display: flex;
     padding-bottom: 30px; 
     box-shadow: inset 0px 0px 16px 1px rgba(0, 0, 0, 0.25);
     z-index: 100;
-    position: relative;
+    position: absolute;
     left: -200px;
+    top: 30px;
 }
 
-ul {
+nav ul {
     padding: 8px;
     margin: 0;
     width: 100%;
 }
 
-li {
+nav li {
     list-style: none;
     margin: 0 8px;
+    height: 1.5em;
 }
 
-hr {
+nav hr {
     border: 0.5px solid var(--color-dark-gray);
     box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.25);
     width: 100%;
     margin: 16px 0;
 }
 
-p {
+nav p {
     color: var(--color-dark-gray);
     font-style: italic;
     font-size: 1.1rem;
@@ -37,10 +39,16 @@ p {
     text-shadow: 1px 1px black;
 }
 
-a { 
+nav a { 
     text-decoration: none;
     color: whitesmoke;
     text-shadow: 1px 1px black;
+}
+
+nav a:hover,
+nav a:active,
+nav a:focus {
+    animation: hoverText 0.01s ease-in forwards;
 }
 
 .selected {
@@ -71,5 +79,11 @@ a {
     }
     100% {
         left: -200px;
+    }
+}
+
+@keyframes hoverText {
+    100% {
+        font-size: 105%;
     }
 }
