--- a/frontend/src/Visual/Background/Background.css
+++ b/frontend/src/Visual/Background/Background.css
@@ -1,45 +1,13 @@
-.background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-    z-index: -500;
-    position: absolute;
-    top: 0;
-}
-
-.ocean {
-    object-fit: cover;
-    height: 100%;
-    min-width: 100%;
-    z-index: -300;
-}
-
 .waveContainer {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 100%;
+    position: relative;
     width: 100%;
-    z-index: -100;
+    min-height: 100%;
 }
 
 .waveContainer img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: sticky;
+    display: block;
     height: 100%;
-    z-index: -50;
+    left: 50%;
+    transform: translateX(-50%);
 }
-
-@media (min-width: 1300px){
-    .waveContainer img {
-        width: 100%;
-        height: auto;
-        object-fit: contain;
-    }
-} 
