--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,8 +27,8 @@ Dark Gray #9e9895
 body, html {
   padding: 0;
   margin: 0;
-  height: auto;
   width: 100%;
+  height: 100%;
 }
 
 body {
@@ -43,4 +43,8 @@ body {
   position: fixed;
   top: 0;
   z-index: 5000;
+}
+
+#root {
+  height: 100%;
 }
