--- a/frontend/src/Components/ArticleFrame/ArticleFrame.css
+++ b/frontend/src/Components/ArticleFrame/ArticleFrame.css
@@ -2,7 +2,6 @@ article {
     width: 100%;
     height: auto;
     margin: 0;
-    padding: 16px 0;
     z-index: 20;
     background-color: white;
 }
@@ -14,34 +13,37 @@ article h3 {
 }
 
 article hr {
-    margin: 0 15%;
-    width: 70%;
+    width: 50%;
     animation: fadeIn 1s ease-in forwards;
 }
 
 article p {
+    display: flex;
+    justify-content: center;
     font-size: 1em;
     line-height: 1.4em; 
-    margin: 0 15% 1em;
+    margin: 0 25% 1em;
     color: black;
     animation: fadeIn 1s ease-in forwards;
 }
 
 .centerContent {
-    width: 100%;
-    margin-top: 15%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.centerContent h1 {
+    margin-top: -6px;
+}
+
+.centerContent p {
+    margin-bottom: 0;
 }
 
 .zigzags {
     width: 100%;
-}
-
-.zztop {
-    margin-bottom: -8px;
-}
-
-.zzBottom {
-    margin-top: -1px;
 }
 
 @keyframes fadeIn {
