--- a/frontend/src/Navigation/SlideNav/SlideNav.css
+++ b/frontend/src/Navigation/SlideNav/SlideNav.css
@@ -6,7 +6,7 @@ nav {
     padding-bottom: 16px; 
     box-shadow: inset 0px 0px 16px 1px rgba(0, 0, 0, 0.25);
     z-index: 100;
-    position: absolute;
+    position: fixed;
     left: -200px;
     top: 30px;
 }
@@ -75,6 +75,7 @@ nav a:focus {
 
 @keyframes slideMenuClosed {
     0% {
+
         left: 0px;
     }
     100% {
