--- a/frontend/src/Components/ArticleFrame/ArticleFrame.css
+++ b/frontend/src/Components/ArticleFrame/ArticleFrame.css
@@ -40,8 +40,19 @@ article p {
     margin-bottom: 0;
 }
 
+#logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 16px;
+}
+
+#logo img {
+    width: 50px;
+}
+
 .zigzags {
     width: 100%;
+    margin-bottom: -8px;
 }
 
 @keyframes fadeIn {
