--- a/frontend/src/Navigation/SlideNav/SlideNav.css
+++ b/frontend/src/Navigation/SlideNav/SlideNav.css
@@ -88,3 +88,16 @@ nav a:focus {
         font-size: 105%;
     }
 }
+
+@media (min-width: 600px){
+    nav {
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 140px;
+    }
+
+    .navContainer {
+        display: none;
+    }
+}
