--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,7 +28,7 @@ body, html {
   padding: 0;
   margin: 0;
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 body {
@@ -46,5 +46,9 @@ body {
 }
 
 #root {
-  height: 100%;
+  height: auto;
+  min-height: 100%;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
