Corrected Opacity issue and added auto start to top of page

--- a/frontend/src/Routes/Projects/Projects.css
+++ b/frontend/src/Routes/Projects/Projects.css
@@ -40,6 +40,7 @@
 .projectImage img {
     width: 100%;
     border: 1px solid black;
+    animation: fadeIn 1.5s ease-in forwards;
 }
 
 @keyframes hoverSvg {
