--- a/frontend/src/Navigation/SlideNav/SlideNav.css
+++ b/frontend/src/Navigation/SlideNav/SlideNav.css
@@ -26,8 +26,8 @@ nav li {
 nav hr {
     border: 0.5px solid var(--color-dark-gray);
     box-shadow: 0px 0px 16px 1px rgba(0, 0, 0, 0.25);
-    width: 100%;
-    margin: 16px 0;
+    width: 80%;
+    margin: 16px auto;
 }
 
 nav p {
